- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    monster.desktop -> 1.2

--- a/monster.desktop
+++ b/monster.desktop
@@ -2,10 +2,9 @@
 Name=Monster
 Comment=NES/SNES style RPG
 Comment[pl]=Gra RPG rodem z NES/SNES
-Icon=monster.xpm
+Icon=monster
 Exec=monster
 Terminal=false
 Type=Application
 Categories=Game;RolePlaying;
-Encoding=UTF-8
 # vi: encoding=utf-8
